<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">EPD-Device Configurator</string>
    <string name="menu_device_configuration">Device Configuration</string>
    <string name="menu_device_batch_configuration">Batch Configuration</string>
    <string name="menu_firmware">Firmware</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_about">About</string>
    <string name="title_activity_device_configuration">EPD configuration</string>
    <string name="device_configuration_device_to_configure">Device select</string>
    <string name="device_configuration_device_type">Device Type:</string>
    <string name="device_configuration_device_profile">Profile:</string>
    <string name="device_configuration_ap_search_device">Rescan</string>
    <string name="device_configuration_ap_select_all">"Select all"</string>
    <string name="device_configuration_ap_clear_all">"Clear all"</string>
    <string name="device_configuration_password_check_label_name">Network password</string>
    <string name="device_configuration_network_name_text">WiFi network</string>
    <string name="device_configuration_device_setting">Apply</string>
    <string name="device_configuration_device_setting_all">Apply All</string>
    <string name="device_configuration_device_apply">Apply</string>
    <string name="device_configuration_device_abort">Abort</string>
    <string name="device_configuration_device_done">Done</string>
    <string name="device_configuration_device_edit_profile">...</string>
    <string name="device_configuration_log">Log</string>
    <string name="device_configuration_scanning_wifi">Scanning Wifi, please wait.</string>
    <string name="device_configuration_device_selection">Selected devices:</string>
    <string name="device_configuration_device_selected">\u0020%d/%d</string>
    <string name="device_configuration_no_device_selected">Please select one or more devices.</string>
    <string name="device_configuration_no_device">Please select the device.</string>
    <string name="device_configuration_no_profile">Please create a profile for this device type.</string>
     <string name="device_configuration_device_type_changed">Device type changed, please rescan.</string>
    <string name="device_configuration_device_not_found">Device not found.</string>
    <string name="search_ap_message">Searching for access points...</string>
    <string name="server_wifi_not_found_message">There are no non-device Access Points nearby, please enter server SSID manually.</string>
    <string name="device_wifi_not_found_message">Device not found.</string>
    <string name="work_in_progress_message">Task launched, please wait...</string>
    <string name="work_done_message">Task finished!</string>
    <string name="device_firmware_no_file">Please select the firmware file.</string>
    <string name="device_firmware_no_checksum">Please provide the correct checksum.</string>
    <string name="device_profile_profile_to_configure">Profile:</string>
    <string name="device_profile_create">New profile</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="dialog_input_name_title">New profile name:</string>
    <string name="dialog_confirm_title">Confirm:</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_profile_add_new_first">Please add a new profile first.</string>
    <string name="dialog_profile_confirm_name_exist">Profile name already exists, please use a different name.</string>
    <string name="dialog_profile_confirm_name_invalid">Profile name is invalid, please try again.</string>
    <string name="dialog_confirm_exit">Do you want to exit app?</string>
    <string name="dialog_about_message">EPD/RTM configuration tool.\n\nversion: %s</string>
    <string name="dialog_confirm_stop_running_task">Tasks are still running, do you want to exit?</string>
    <string name="device_profile_confirm_delete">Profile <b>%s</b> will be deleted. Continue?</string>
    <string name="device_profile_confirm_save_before_leaving">Profile changed. Do you want to save it?</string>
    <string name="device_profile_confirm_save">OK to save?</string>
    <string name="device_profile_wifi_hint">Click on one hotspot.</string>
    <string name="device_profile_error_server_ip">Incorrect server IP.</string>
    <string name="device_profile_error_server_port">Incorrect server port.</string>
    <string name="device_profile_error_ssid">Incorrect SSID.</string>
    <string name="device_profile_error_password">Password is missing.</string>
    <string name="device_profile_error_ca_cert">CA certificate is missing.</string>
    <string name="device_profile_error_client_cert">Client certificate is missing.</string>
    <string name="device_profile_error_private_key">Private key is missing.</string>
    <string name="device_profile_error_domain">Domain is missing.</string>
    <string name="device_profile_error_identity">Identity is missing.</string>
    <string name="device_profile_error_anonymous_identity">Anonymous identity is missing.</string>
    <string name="device_profile_error_ip">Incorrect static IP.</string>
    <string name="device_profile_error_gateway">Incorrect gateway.</string>
    <string name="device_profile_error_subnet_mask">Incorrect subnet mask.</string>
    <string name="device_profile_error_dns">Incorrect DNS.</string>
    <string name="device_profile_error_mqtt_topic">MQTT topic is missing.</string>
    <string name="device_profile_error_mqtt_username">MQTT username is missing.</string>
    <string name="device_profile_error_mqtt_password">MQTT password is missing.</string>
    <string name="image_description">image</string>
    <string name="device_profile_server_ip">Server IP</string>
    <string name="device_profile_server_port">Server Port</string>
    <string name="device_profile_mqtt_topic">MQTT topic</string>
    <string name="device_profile_mqtt_username">MQTT username</string>
    <string name="device_profile_mqtt_password">MQTT password</string>
    <string name="device_profile_enter_cert_path_hint">File path for the cert file</string>
    <string name="wifi_eap_ca_cert_file">CA certificate(*.pem)</string>
    <string name="wifi_eap_client_cert_file">Client certificate(*.pem)</string>
    <string name="wifi_eap_private_key_file">Private key</string>
    <string name="file_status_missing">Not Present</string>
    <string name="file_status_saved">Saved</string>
    <string name="wifi_eap_file_max_exceeded">The file size is larger than 40K, please try another one.</string>
    <string name="wifi_eap_file_delete_message">Nothing selected. Would you like to remove the old one?</string>
    <string name="run_task_done">Done</string>
    <string name="run_task_waiting">Please wait...</string>
    <string name="select_file_title">Please select the target file:</string>
    <string name="device_firmware_label">Firmware file:</string>
    <string name="device_firmware_checksum_label">Firmware checksum:</string>
    <string name="firmware_checksum_hint">0AF1</string>
    <string-array name="device_types">
        <item>EPD7800</item>
        <item>EPD9700</item>

    </string-array>
    <string-array name="firmware_device_types">
        <item>EPD7800</item>
        <item>EPD9700</item>
    </string-array>
    <string-array name="wifi_security_types">
        <item>None</item>
        <item>WEP</item>
        <item>WPA/WPA2-Personal</item>
        <item>WPA/WPA2-Enterprise</item>
    </string-array>
    <string name="wifi_ssid">Network name</string>
    <string name="device_configuration_ssid">Device SSID</string>
    <string name="wifi_quick_toggle_title">Wi\u2011Fi</string>
    <string name="wifi_quick_toggle_summary">Turn on Wi\u2011Fi</string>
    <string name="wifi_settings">Wi\u2011Fi</string>
    <string name="wifi_settings_master_switch_title">Use Wi\u2011Fi</string>
    <string name="wifi_settings_category">Wi\u2011Fi settings</string>
    <string name="wifi_settings_title">Wi\u2011Fi</string>
    <string name="wifi_settings_summary">Set up &amp; manage wireless access points</string>
    <string name="wifi_select_network">Select Wi\u2011Fi</string>
    <string name="wifi_starting">Turning Wi\u2011Fi on\u2026</string>
    <string name="wifi_stopping">Turning off Wi\u2011Fi\u2026</string>
    <string name="wifi_error">Error</string>
    <string name="wifi_sap_no_channel_error">5 GHz band not available in this country</string>
    <string name="wifi_in_airplane_mode">In Airplane mode</string>
    <string name="wifi_notify_open_networks">Open network notification</string>
    <string name="wifi_notify_open_networks_summary">Notify when a high\u2011quality public network is available</string>
    <string name="wifi_wakeup">Turn on Wi\u2011Fi automatically</string>
    <string name="wifi_wakeup_summary">Wi\u2011Fi will turn back on near high\u2011quality saved networks, like your home network</string>
    <string name="wifi_wakeup_summary_no_location">Unavailable because location is turned off. Turn on <annotation id="link">location</annotation>.</string>
    <string name="wifi_wakeup_summary_scanning_disabled">Unavailable because Wi\u2011Fi scanning is turned off</string>
    <string name="wifi_wakeup_summary_scoring_disabled">To use, select a network rating provider</string>
    <string name="wifi_poor_network_detection">Avoid poor connections</string>
    <string name="wifi_poor_network_detection_summary">Don\u2019t use a Wi\u2011Fi network unless it has a good internet connection</string>
    <string name="wifi_avoid_poor_network_detection_summary">Only use networks that have a good internet connection</string>
    <string name="use_open_wifi_automatically_title">Connect to open networks</string>
    <string name="use_open_wifi_automatically_summary">Automatically connect to high\u2011quality public networks</string>
    <string name="use_open_wifi_automatically_summary_scoring_disabled">To use, select a network rating provider</string>
    <string name="use_open_wifi_automatically_summary_scorer_unsupported_disabled">To use, select a compatible network rating provider</string>
    <string name="wifi_install_credentials">Install certificates</string>
    <string name="wifi_scan_notify_text">To improve location accuracy, apps and services can still scan for Wi\u2011Fi networks at any time, even when Wi\u2011Fi is off. This can be used, for example, to improve location-based features and services. You can change this in <xliff:g id="link_begin">LINK_BEGIN</xliff:g>scanning settings<xliff:g id="link_end">LINK_END</xliff:g>.</string>
    <string name="wifi_scan_notify_text_scanning_off">To improve location accuracy,
        turn on Wi-Fi scanning in
        <xliff:g id="link_begin">LINK_BEGIN</xliff:g>scanning
        settings<xliff:g id="link_end">LINK_END</xliff:g>.</string>
    <string name="wifi_scan_notify_remember_choice">Don\u2019t show again</string>
    <string name="wifi_ssid_hint">Enter the SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_ip_address">IP address</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wifi_ip_settings">IP settings</string>
    <string name="wifi_dns">DNS</string>
    <string name="wifi_gateway">Gateway</string>
    <string name="wifi_network_subnet_mask">Network subnet mask</string>
    <string name="wifi_ip_address_hint" translatable="false">192.168.1.128</string>
    <string name="wifi_dns1_hint" translatable="false">8.8.8.8</string>
    <string name="wifi_gateway_hint" translatable="false">192.168.1.1</string>
    <string name="wifi_network_subnet_mask_hint" translatable="false">255.255.255.0</string>
    <string name="proxy_port_hint" translatable="false">8080</string>
</resources>